--- a/Pod/Assets/SCStoryboard.storyboard
+++ b/Pod/Assets/SCStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="0sJ-qu-8NN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="0sJ-qu-8NN">
     <dependencies>
         <deployment version="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -11189,22 +11189,22 @@ Remove search filter?</string>
                                     <outletCollection property="gestureRecognizers" destination="zsC-eD-98q" appends="YES" id="Pg1-rE-hsC"/>
                                 </connections>
                             </view>
-                            <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x7i-rY-FiT" userLabel="ChatController">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x7i-rY-FiT" userLabel="ChatController">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <connections>
                                     <segue destination="S0N-Ry-2Pf" kind="embed" id="Xzs-Oh-JTX"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9L4-TB-xSa" userLabel="StatusController">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <connections>
+                                    <segue destination="5BD-sX-g97" kind="embed" id="ZJF-d0-gCK"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W8d-tf-KvJ" userLabel="StartController">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <connections>
                                     <segue destination="xAB-Qf-3TH" kind="embed" id="eZM-hz-Ynf"/>
-                                </connections>
-                            </containerView>
-                            <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9L4-TB-xSa" userLabel="StatusController">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <connections>
-                                    <segue destination="5BD-sX-g97" kind="embed" id="ZJF-d0-gCK"/>
                                 </connections>
                             </containerView>
                         </subviews>
@@ -11232,7 +11232,12 @@ Remove search filter?</string>
                     <nil key="simulatedStatusBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dr3-Xl-MkL" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="zsC-eD-98q" userLabel="Tap-Video Gesture"/>
+                <tapGestureRecognizer id="zsC-eD-98q" userLabel="Tap-Video Gesture">
+                    <connections>
+                        <action selector="toggleBroadcastStatusController:" destination="iXR-N4-hio" id="SNu-3q-H6B"/>
+                        <outlet property="delegate" destination="iXR-N4-hio" id="XKb-P9-fY4"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="284" y="13129"/>
         </scene>
@@ -11256,15 +11261,20 @@ Remove search filter?</string>
                                     <action selector="broadcastNameChanged:" destination="xAB-Qf-3TH" eventType="editingDidEndOnExit" id="dvD-fE-BOW"/>
                                 </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Itn-ZI-cmO">
-                                <rect key="frame" x="106" y="500" width="109" height="30"/>
-                                <state key="normal" title="Start Live Video"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Itn-ZI-cmO" customClass="SCFlatButton">
+                                <rect key="frame" x="96" y="188" width="129" height="28"/>
+                                <color key="backgroundColor" red="0.20000000300000001" green="0.60000002379999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="0.13199176787937003" green="0.43756456312974412" blue="0.86172738259668513" alpha="1" colorSpace="calibratedRGB"/>
+                                <inset key="contentEdgeInsets" minX="10" minY="5" maxX="10" maxY="5"/>
+                                <state key="normal" title="Start Live Video">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="startVideo:" destination="xAB-Qf-3TH" eventType="touchUpInside" id="xU3-Bd-uen"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eka-gf-AMh">
-                                <rect key="frame" x="98" y="422" width="124" height="70"/>
+                                <rect key="frame" x="98" y="110" width="124" height="70"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F6l-6U-hOF">
                                         <rect key="frame" x="74" y="20" width="30" height="30"/>
@@ -11302,7 +11312,7 @@ Remove search filter?</string>
                             <constraint firstItem="Itn-ZI-cmO" firstAttribute="centerX" secondItem="Wel-HG-rUq" secondAttribute="centerX" id="00w-OV-Ohj"/>
                             <constraint firstItem="Eka-gf-AMh" firstAttribute="centerX" secondItem="Wel-HG-rUq" secondAttribute="centerX" id="4bc-pH-Ufs"/>
                             <constraint firstItem="G7Y-cB-HvY" firstAttribute="top" secondItem="p5C-ma-Jqq" secondAttribute="bottom" constant="40" id="C2u-qB-0OW"/>
-                            <constraint firstItem="5Mj-0h-KnL" firstAttribute="top" secondItem="Itn-ZI-cmO" secondAttribute="bottom" constant="38" id="NIO-Yg-OCs"/>
+                            <constraint firstItem="Eka-gf-AMh" firstAttribute="top" secondItem="G7Y-cB-HvY" secondAttribute="bottom" constant="40" id="Lhd-Kl-pTh"/>
                             <constraint firstItem="PVh-8s-7J4" firstAttribute="leading" secondItem="Wel-HG-rUq" secondAttribute="leadingMargin" id="TFg-PQ-dEX"/>
                             <constraint firstItem="G7Y-cB-HvY" firstAttribute="leading" secondItem="Wel-HG-rUq" secondAttribute="leadingMargin" id="dRS-6j-qpG"/>
                             <constraint firstItem="Itn-ZI-cmO" firstAttribute="top" secondItem="Eka-gf-AMh" secondAttribute="bottom" constant="8" id="hLS-dd-Zyu"/>
@@ -11433,7 +11443,6 @@ Remove search filter?</string>
                                 <rect key="frame" x="110" y="500" width="102" height="30"/>
                                 <state key="normal" title="End Live Video"/>
                                 <connections>
-                                    <action selector="startVideo:" destination="5BD-sX-g97" eventType="touchUpInside" id="O4Q-OM-bco"/>
                                     <action selector="stopBroadcast:" destination="5BD-sX-g97" eventType="touchUpInside" id="mbl-cQ-yr4"/>
                                 </connections>
                             </button>
