--- a/Pod/Assets/SCStoryboard.storyboard
+++ b/Pod/Assets/SCStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="0sJ-qu-8NN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="0sJ-qu-8NN">
     <dependencies>
         <deployment version="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -11230,6 +11230,9 @@ Remove search filter?</string>
                     </view>
                     <navigationItem key="navigationItem" id="oCB-tf-oIz"/>
                     <nil key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outlet property="videoView" destination="01l-eT-zNG" id="Zbo-7u-dOC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dr3-Xl-MkL" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="zsC-eD-98q" userLabel="Tap-Video Gesture">
@@ -11254,7 +11257,7 @@ Remove search filter?</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What are you looking at...?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G7Y-cB-HvY">
-                                <rect key="frame" x="16" y="40" width="288" height="30"/>
+                                <rect key="frame" x="16" y="60" width="288" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                 <connections>
@@ -11262,7 +11265,7 @@ Remove search filter?</string>
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Itn-ZI-cmO" customClass="SCFlatButton">
-                                <rect key="frame" x="96" y="188" width="129" height="28"/>
+                                <rect key="frame" x="96" y="208" width="129" height="28"/>
                                 <color key="backgroundColor" red="0.20000000300000001" green="0.60000002379999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="tintColor" red="0.13199176787937003" green="0.43756456312974412" blue="0.86172738259668513" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="contentEdgeInsets" minX="10" minY="5" maxX="10" maxY="5"/>
@@ -11273,49 +11276,57 @@ Remove search filter?</string>
                                     <action selector="startVideo:" destination="xAB-Qf-3TH" eventType="touchUpInside" id="xU3-Bd-uen"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eka-gf-AMh">
-                                <rect key="frame" x="98" y="110" width="124" height="70"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F6l-6U-hOF">
-                                        <rect key="frame" x="74" y="20" width="30" height="30"/>
-                                        <state key="normal" image="ico_encryption_settings"/>
-                                        <connections>
-                                            <segue destination="mgI-9l-cAH" kind="modal" identifier="SCUserSelectionControllerSegue" modalTransitionStyle="crossDissolve" id="LMm-VR-Dog"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tux-OT-qu9">
-                                        <rect key="frame" x="20" y="20" width="30" height="30"/>
-                                        <state key="normal" image="ico_geolocation-24x24"/>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="F6l-6U-hOF" secondAttribute="bottom" constant="20" id="Gsk-Jb-AsC"/>
-                                    <constraint firstAttribute="bottom" secondItem="tux-OT-qu9" secondAttribute="bottom" constant="20" id="SmQ-eQ-ppH"/>
-                                    <constraint firstItem="tux-OT-qu9" firstAttribute="top" secondItem="Eka-gf-AMh" secondAttribute="top" constant="20" id="UbM-wO-cxy"/>
-                                    <constraint firstAttribute="trailing" secondItem="F6l-6U-hOF" secondAttribute="trailing" constant="20" id="Ygd-6u-45Z"/>
-                                    <constraint firstItem="F6l-6U-hOF" firstAttribute="top" secondItem="Eka-gf-AMh" secondAttribute="top" constant="20" id="c8j-bA-zSp"/>
-                                    <constraint firstItem="tux-OT-qu9" firstAttribute="leading" secondItem="Eka-gf-AMh" secondAttribute="leading" constant="20" id="iGW-GQ-Ofr"/>
-                                    <constraint firstItem="F6l-6U-hOF" firstAttribute="leading" secondItem="tux-OT-qu9" secondAttribute="trailing" constant="24" id="kiU-lt-Sv3"/>
-                                </constraints>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PVh-8s-7J4">
-                                <rect key="frame" x="20" y="8" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PVh-8s-7J4">
+                                <rect key="frame" x="16" y="8" width="39" height="30"/>
                                 <state key="normal" title="Close"/>
                                 <connections>
                                     <action selector="closeController:" destination="xAB-Qf-3TH" eventType="touchUpInside" id="OLR-Gu-579"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eka-gf-AMh">
+                                <rect key="frame" x="64" y="130" width="193" height="70"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tux-OT-qu9">
+                                        <rect key="frame" x="20" y="20" width="30" height="30"/>
+                                        <state key="normal" image="ico_geolocation-24x24"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F6l-6U-hOF">
+                                        <rect key="frame" x="81" y="20" width="30" height="30"/>
+                                        <state key="normal" image="ico_encryption_settings"/>
+                                        <connections>
+                                            <segue destination="mgI-9l-cAH" kind="modal" identifier="SCUserSelectionControllerSegue" modalTransitionStyle="crossDissolve" id="LMm-VR-Dog"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OFj-bO-OT7" userLabel="Camera Button">
+                                        <rect key="frame" x="143" y="20" width="30" height="30"/>
+                                        <state key="normal" image="ico_cam-24x24"/>
+                                        <connections>
+                                            <action selector="toggleCamera:" destination="xAB-Qf-3TH" eventType="touchUpInside" id="1aY-SJ-mtY"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="193" id="4fb-6z-lye"/>
+                                    <constraint firstAttribute="height" constant="70" id="5Qa-Tl-XnV"/>
+                                    <constraint firstItem="tux-OT-qu9" firstAttribute="centerY" secondItem="Eka-gf-AMh" secondAttribute="centerY" id="WXA-7U-W1E"/>
+                                    <constraint firstItem="F6l-6U-hOF" firstAttribute="centerX" secondItem="Eka-gf-AMh" secondAttribute="centerX" id="fu6-kN-M5w"/>
+                                    <constraint firstItem="tux-OT-qu9" firstAttribute="leading" secondItem="Eka-gf-AMh" secondAttribute="leading" constant="20" id="kMW-0p-mWc"/>
+                                    <constraint firstItem="F6l-6U-hOF" firstAttribute="centerY" secondItem="Eka-gf-AMh" secondAttribute="centerY" id="n5n-hl-mpn"/>
+                                    <constraint firstAttribute="trailing" secondItem="OFj-bO-OT7" secondAttribute="trailing" constant="20" id="oij-fW-2mH"/>
+                                    <constraint firstItem="OFj-bO-OT7" firstAttribute="centerY" secondItem="Eka-gf-AMh" secondAttribute="centerY" id="qsj-SO-fI9"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Itn-ZI-cmO" firstAttribute="centerX" secondItem="Wel-HG-rUq" secondAttribute="centerX" id="00w-OV-Ohj"/>
-                            <constraint firstItem="Eka-gf-AMh" firstAttribute="centerX" secondItem="Wel-HG-rUq" secondAttribute="centerX" id="4bc-pH-Ufs"/>
-                            <constraint firstItem="G7Y-cB-HvY" firstAttribute="top" secondItem="p5C-ma-Jqq" secondAttribute="bottom" constant="40" id="C2u-qB-0OW"/>
-                            <constraint firstItem="Eka-gf-AMh" firstAttribute="top" secondItem="G7Y-cB-HvY" secondAttribute="bottom" constant="40" id="Lhd-Kl-pTh"/>
+                            <constraint firstItem="G7Y-cB-HvY" firstAttribute="top" secondItem="p5C-ma-Jqq" secondAttribute="bottom" constant="60" id="C2u-qB-0OW"/>
                             <constraint firstItem="PVh-8s-7J4" firstAttribute="leading" secondItem="Wel-HG-rUq" secondAttribute="leadingMargin" id="TFg-PQ-dEX"/>
+                            <constraint firstItem="Eka-gf-AMh" firstAttribute="centerX" secondItem="Wel-HG-rUq" secondAttribute="centerX" id="Tyi-Bc-AuY"/>
                             <constraint firstItem="G7Y-cB-HvY" firstAttribute="leading" secondItem="Wel-HG-rUq" secondAttribute="leadingMargin" id="dRS-6j-qpG"/>
-                            <constraint firstItem="Itn-ZI-cmO" firstAttribute="top" secondItem="Eka-gf-AMh" secondAttribute="bottom" constant="8" id="hLS-dd-Zyu"/>
+                            <constraint firstItem="Eka-gf-AMh" firstAttribute="top" secondItem="G7Y-cB-HvY" secondAttribute="bottom" constant="40" id="k4a-2A-H4P"/>
+                            <constraint firstItem="Itn-ZI-cmO" firstAttribute="top" secondItem="Eka-gf-AMh" secondAttribute="bottom" constant="8" id="nFv-bA-aKF"/>
                             <constraint firstItem="PVh-8s-7J4" firstAttribute="top" secondItem="p5C-ma-Jqq" secondAttribute="bottom" constant="8" id="qS8-wr-Hxz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="G7Y-cB-HvY" secondAttribute="trailing" id="sg1-Zy-Zuv"/>
                         </constraints>
@@ -11439,15 +11450,19 @@ Remove search filter?</string>
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="faw-Jz-IgH">
-                                <rect key="frame" x="110" y="500" width="102" height="30"/>
-                                <state key="normal" title="End Live Video"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="faw-Jz-IgH" customClass="SCFlatButton">
+                                <rect key="frame" x="99" y="460" width="122" height="28"/>
+                                <color key="backgroundColor" red="0.20000000300000001" green="0.60000002379999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <inset key="contentEdgeInsets" minX="10" minY="5" maxX="10" maxY="5"/>
+                                <state key="normal" title="End Live Video">
+                                    <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="stopBroadcast:" destination="5BD-sX-g97" eventType="touchUpInside" id="mbl-cQ-yr4"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aGm-xC-Yu1">
-                                <rect key="frame" x="254" y="20" width="30" height="30"/>
+                                <rect key="frame" x="234" y="40" width="30" height="30"/>
                                 <state key="normal" image="ico_cam-24x24"/>
                                 <connections>
                                     <action selector="toggleCamera:" destination="5BD-sX-g97" eventType="touchUpInside" id="gh4-aL-tgS"/>
@@ -11456,9 +11471,9 @@ Remove search filter?</string>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="kHH-mF-nBL" firstAttribute="top" secondItem="faw-Jz-IgH" secondAttribute="bottom" constant="38" id="Bcr-kJ-4oM"/>
-                            <constraint firstItem="aGm-xC-Yu1" firstAttribute="trailing" secondItem="xc8-fh-XjI" secondAttribute="trailingMargin" constant="-20" id="GUP-Dc-fry"/>
-                            <constraint firstItem="aGm-xC-Yu1" firstAttribute="top" secondItem="oct-Gp-lTZ" secondAttribute="bottom" constant="20" id="de6-1K-e6s"/>
+                            <constraint firstItem="kHH-mF-nBL" firstAttribute="top" secondItem="faw-Jz-IgH" secondAttribute="bottom" constant="80" id="Bcr-kJ-4oM"/>
+                            <constraint firstItem="aGm-xC-Yu1" firstAttribute="trailing" secondItem="xc8-fh-XjI" secondAttribute="trailingMargin" constant="-40" id="GUP-Dc-fry"/>
+                            <constraint firstItem="aGm-xC-Yu1" firstAttribute="top" secondItem="oct-Gp-lTZ" secondAttribute="bottom" constant="40" id="de6-1K-e6s"/>
                             <constraint firstItem="faw-Jz-IgH" firstAttribute="centerX" secondItem="xc8-fh-XjI" secondAttribute="centerX" id="kdZ-DR-SSl"/>
                         </constraints>
                     </view>
